<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/step_one" />

        <EditText
            android:id="@+id/phone_number"
            style="@style/EidtTextStyle"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            style="@style/EidtTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/authAccount"
            style="@style/EidtTextStyle"
            android:hint="@string/authAccount"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/account_password"
            style="@style/EidtTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/e_mail"
            style="@style/EidtTextStyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <Button
            android:id="@+id/save_login_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_login_info"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_margin="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_two" />

        <Button
            android:id="@+id/btn_accessibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/open_accessibility"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_margin="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_three" />

        <Button
            android:id="@+id/btn_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/set_time"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule_one"
            android:textSize="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule_two"
            android:textSize="10sp" />

    </LinearLayout>

</ScrollView>
